feat: Improvements for deployment to Aquarium

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,18 @@
 /.git
 /node_modules
 /lib
+/builds
+
 /*Versions.json
+/*Versions.jsonl
+
+.DS_Store
+
+/.idea
+
+*.env*
+
+src/deployments/**/development.json
+src/deployments/**/development.ts
+src/deployments/**/*.wasm
+src/deployments/**/*.contract
