--- a/package.json
+++ b/package.json
@@ -2,45 +2,45 @@
   "name": "@azns/indexer",
   "author": "AZERO Domains <hello@azero.domains> (https://azero.domains)",
   "homepage": "https://azero.domains",
+  "engines": {
+    "node": "16"
+  },
   "scripts": {
     "codegen:model": "squid-typeorm-codegen",
     "codegen:metadata": "./typegen-all.sh",
-    "codegen": "pnpm codegen:model && pnpm codegen:metadata",
+    "codegen": "npm run codegen:model && npm run codegen:metadata",
     "build": "rm -rf lib && tsc",
-    "migration:generate": "pnpm build && rm -rf ./db/migrations && squid-typeorm-migration generate",
+    "migration:generate": "npm run build && rm -rf ./db/migrations && squid-typeorm-migration generate",
     "migration:apply": "squid-typeorm-migration apply",
     "start:archive": "docker compose -f docker-compose.archive.yml up",
     "start:squid": "docker compose -f docker-compose.squid.yml up",
-    "start:processor": "pnpm build && pnpm migration:apply && node --require=dotenv/config lib/processor.js",
+    "start:processor": "npm run build && npm run migration:apply && node -r dotenv/config lib/processor",
     "serve": "squid-graphql-server",
-    "lint": "prettier . --check && pnpm eslint",
-    "lint:fix": "prettier . --write && pnpm eslint --fix",
-    "prepare": "husky install"
+    "lint": "prettier . --check && eslint",
+    "lint:fix": "prettier . --write && eslint --fix"
   },
   "devDependencies": {
-    "@subsquid/archive-registry": "2.1.10",
+    "@subsquid/archive-registry": "^2.1.11",
     "@subsquid/graphql-server": "3.3.2",
-    "@subsquid/ink-abi": "^1.0.1",
-    "@subsquid/ink-typegen": "^0.2.0",
+    "@subsquid/ink-abi": "^1.1.0",
+    "@subsquid/ink-typegen": "^0.2.1",
     "@subsquid/ss58": "^0.1.4",
-    "@subsquid/substrate-metadata-explorer": "^1.1.0",
+    "@subsquid/substrate-metadata-explorer": "^1.1.2",
     "@subsquid/substrate-processor": "2.4.1",
-    "@subsquid/typeorm-codegen": "^0.3.2",
+    "@subsquid/typeorm-codegen": "^0.3.3",
     "@subsquid/typeorm-migration": "0.1.6",
     "@subsquid/typeorm-store": "0.2.2",
-    "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
+    "@types/node": "^16.18.23",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "dotenv": "^16.0.3",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.0.4",
-    "pg": "8.8.0",
-    "prettier": "^2.8.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "pg": "^8.10.0",
+    "prettier": "^2.8.7",
     "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
-    "typeorm": "^0.3.11",
-    "typescript": "~4.6.2"
+    "typeorm": "^0.3.14",
+    "typescript": "^4.9.5"
   }
 }
