--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^2.8.7",
     "rimraf": "^4.4.1",
     "ts-node": "^10.9.1",
+    "type-graphql": "^1.2.0-rc.1",
     "typeorm": "^0.3.14",
     "typescript": "^4.9.5"
   }
