feat: Add public-phase indexing & multiple minor improvements

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "codegen:metadata": "./typegen-all.sh",
     "codegen": "npm run codegen:model && npm run codegen:metadata",
     "build": "rm -rf lib && tsc",
-    "migration:generate": "npm run build && rm -rf ./db/migrations && squid-typeorm-migration generate",
+    "migration:clean": "rm -rf ./db/migrations",
+    "migration:generate": "npm run build && squid-typeorm-migration generate",
     "migration:apply": "squid-typeorm-migration apply",
     "start:archive": "docker compose -f docker-compose.archive.yml up",
     "start:squid": "docker compose -f docker-compose.squid.yml up",
