--- a/squid.azns-testnet.yaml
+++ b/squid.azns-testnet.yaml
@@ -1,6 +1,6 @@
 manifestVersion: subsquid.io/v0.1
 name: azns-testnet
-version: 1
+version: 2
 description: 'AZERO Domains Subsquid Indexer (Aleph Zero Testnet)'
 
 build:
@@ -12,6 +12,7 @@ deploy:
     cmd: ['node', 'lib/processor']
     env:
       CHAIN: alephzero-testnet
+      CHAIN_PREFIX: 42
       RPC: wss://ws.test.azero.dev
       ARCHIVE: aleph-zero-testnet
   api:
