--- a/squid.azns-testnet.yaml
+++ b/squid.azns-testnet.yaml
@@ -1,7 +1,7 @@
 manifestVersion: subsquid.io/v0.1
 name: azns-testnet
 version: 2
-description: 'AZERO Domains Subsquid Indexer (Aleph Zero Testnet)'
+description: 'AZERO.ID Subsquid Indexer (Aleph Zero Testnet)'
 
 build:
 
