feat: add referrerRank

--- a/.env.example
+++ b/.env.example
@@ -25,12 +25,15 @@ GQL_PORT=4350
 #    or left bland for a locally running archive.
 
 # CHAIN=development
+# CHAIN_PREFIX=42
 # RPC=wss://localhost:9944
 
 CHAIN=alephzero-testnet
 RPC=wss://ws.test.azero.dev
 ARCHIVE=aleph-zero-testnet
+CHAIN_PREFIX=42
 
 # CHAIN=alephzero
+# CHAIN_PREFIX=42
 # RPC=wss://ws.azero.dev
 # ARCHIVE=aleph-zero
