feat: Upgrade to ArrowSquid

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ GQL_PORT=4350
 # Documentation (also see README.md):
 #  - `CHAIN` must be a valid chain name from `@scio-labs/use-inkathon` and 
 #    matching deployment address files must be present in `src/deployments`.
-#  - `RPC` must be the websocket endpoint for the chain's RPC server.
+#  - `RPC` must be the https endpoint for the chain's RPC server.
 #  - `ARCHIVE` must be a valid identifier from `@subsquid/archive-registry` 
 #    or left bland for a locally running archive.
 
@@ -29,11 +29,11 @@ GQL_PORT=4350
 # RPC=wss://localhost:9944
 
 CHAIN=alephzero-testnet
-RPC=wss://ws.test.azero.dev
-ARCHIVE=aleph-zero-testnet
 CHAIN_PREFIX=42
+RPC=https://aleph-zero-testnet-rpc.dwellir.com
+ARCHIVE=aleph-zero-testnet
 
 # CHAIN=alephzero
 # CHAIN_PREFIX=42
-# RPC=wss://ws.azero.dev
+# RPC=https://aleph-zero-rpc.dwellir.com
 # ARCHIVE=aleph-zero
