--- a/squid.azns-mainnet.yaml
+++ b/squid.azns-mainnet.yaml
@@ -1,7 +1,7 @@
 manifestVersion: subsquid.io/v0.1
 name: azns-mainnet
 version: 6
-description: 'AZERO.ID Subsquid Indexer (Aleph Zero Mainnet)'
+description: 'AZERO.ID Indexer (Aleph Zero Mainnet)'
 
 build:
 
@@ -13,7 +13,7 @@ deploy:
     env:
       CHAIN: alephzero
       CHAIN_PREFIX: 42
-      RPC: wss://ws.azero.dev
+      RPC: https://aleph-zero-rpc.dwellir.com
       ARCHIVE: aleph-zero
   api:
     cmd:
