feat: Enable RPC proxy for Aleph Zero mainnet

--- a/.env.example
+++ b/.env.example
@@ -30,10 +30,12 @@ GQL_PORT=4350
 
 CHAIN=alephzero-testnet
 CHAIN_PREFIX=42
-RPC=https://aleph-zero-testnet-rpc.dwellir.com
+# RPC=https://aleph-zero-testnet-rpc.dwellir.com/
+RPC=wss://ws.test.azero.dev/
 ARCHIVE=aleph-zero-testnet
 
 # CHAIN=alephzero
 # CHAIN_PREFIX=42
-# RPC=https://aleph-zero-rpc.dwellir.com
+# # RPC=https://aleph-zero-rpc.dwellir.com/
+# RPC=wss://ws.azero.dev/
 # ARCHIVE=aleph-zero
