--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "deploy": "sqd deploy . -o azero-id -m",
     "lint": "prettier . --check && eslint",
     "lint:fix": "prettier . --write && eslint --fix",
-    "update": "npm-check-updates --interactive --root --format group --install always",
+    "update": "npx npm-check-updates --interactive --root --format group --install always",
     "typecheck": "tsc --pretty --noEmit",
     "typesync": "typesync && npm install"
   },
   "dependencies": {
     "@polkadot/util": "^13.0.2",
     "@subsquid/archive-registry": "^3.3.0",
-    "@subsquid/graphql-server": "4.6.0",
-    "@subsquid/ink-abi": "^3.1.0",
+    "@subsquid/graphql-server": "4.7.0",
+    "@subsquid/ink-abi": "^3.1.1",
     "@subsquid/ss58": "^2.0.2",
-    "@subsquid/substrate-processor": "^8.4.1",
+    "@subsquid/substrate-processor": "^8.5.0",
     "@subsquid/typeorm-migration": "1.3.0",
     "@subsquid/typeorm-store": "^1.5.1",
     "axios": "^1.7.2",
@@ -41,14 +41,14 @@
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "pg": "^8.12.0",
-    "pino": "^9.3.1",
-    "pino-pretty": "^11.2.1",
+    "pino": "^9.3.2",
+    "pino-pretty": "^11.2.2",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@subsquid/ink-typegen": "^3.1.0",
     "@subsquid/substrate-metadata-explorer": "^3.1.2",
-    "@subsquid/typeorm-codegen": "^2.0.1",
+    "@subsquid/typeorm-codegen": "^2.0.2",
     "@types/eslint": "~9.6.0",
     "@types/eslint-config-prettier": "~6.11.3",
     "@types/node": "^20.14.12",
