fix: Update script

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "deploy": "sqd deploy . -o azero-id -m",
     "lint": "prettier . --check && eslint",
     "lint:fix": "prettier . --write && eslint --fix",
-    "update": "npx npm-check-updates --interactive --root --format group --install always",
+    "update": "npx npm-check-updates --interactive --root --format group --install never && npm install",
     "typecheck": "tsc --pretty --noEmit",
     "typesync": "typesync && npm install"
   },
