chore: Remove `ARCHIVE` parameter

--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,7 @@ GQL_PORT=4350
 #  - `CHAIN` must be a valid chain name from `@scio-labs/use-inkathon` and 
 #    matching deployment address files must be present in `src/deployments`.
 #  - `RPC` must be the https endpoint for the chain's RPC server.
-#  - `ARCHIVE` must be a valid identifier from `@subsquid/archive-registry` 
-#    or left bland for a locally running archive.
+#  - `GATEWAY` must be a valid url from https://docs.subsquid.io/subsquid-network/reference/substrate-networks/
 
 # CHAIN=development
 # CHAIN_PREFIX=42
@@ -35,10 +34,10 @@ CHAIN=alephzero-testnet
 CHAIN_PREFIX=42
 # RPC=https://aleph-zero-testnet-rpc.dwellir.com/
 RPC=wss://ws.test.azero.dev/
-ARCHIVE=aleph-zero-testnet
+GATEWAY=https://v2.archive.subsquid.io/network/aleph-zero-testnet
 
 # CHAIN=alephzero
 # CHAIN_PREFIX=42
 # # RPC=https://aleph-zero-rpc.dwellir.com/
 # RPC=wss://ws.azero.dev/
-# ARCHIVE=aleph-zero
+# GATEWAY=https://v2.archive.subsquid.io/network/aleph-zero
