--- a/squid.azns-testnet.yaml
+++ b/squid.azns-testnet.yaml
@@ -1,6 +1,6 @@
 manifestVersion: subsquid.io/v0.1
 name: azns-testnet
-version: 22
+version: 24
 description: 'AZERO.ID Indexer (Aleph Zero Testnet)'
 
 build:
@@ -9,7 +9,7 @@ deploy:
   addons:
     postgres:
     rpc:
-      - aleph-zero-testnet:http
+      - aleph-zero-testnet.http
   processor:
     cmd: ['node', 'lib/processor']
     env:
