--- a/squid.azns-mainnet.yaml
+++ b/squid.azns-mainnet.yaml
@@ -1,6 +1,6 @@
 manifestVersion: subsquid.io/v0.1
 name: azns-mainnet
-version: 9
+version: 10
 description: 'AZERO.ID Indexer (Aleph Zero Mainnet)'
 
 build:
@@ -8,8 +8,8 @@ build:
 deploy:
   addons:
     postgres:
-    rpc:
-      - aleph-zero.http
+    # rpc:
+    #   - aleph-zero.http
   processor:
     cmd: ['node', 'lib/processor']
     env:
